[project]
name = "hh-lora-test-truthful"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "peft>=0.18.0",
    "sentencepiece>=0.2.1",
    "transformers>=4.57.3",
]
